--- a/src/main/resources/project/licenta/costs.fxml
+++ b/src/main/resources/project/licenta/costs.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -63,14 +66,188 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane>
+      <AnchorPane prefHeight="471.0" prefWidth="900.0">
          <children>
-            <ImageView fitHeight="391.0" fitWidth="900.0" pickOnBounds="true">
+            <ImageView fitHeight="605.0" fitWidth="900.0" pickOnBounds="true">
                <image>
                   <Image url="@images/login_background.jpg" />
                </image>
             </ImageView>
-            <AnchorPane fx:id="paneSlider" layoutY="6.0" prefHeight="381.0" prefWidth="216.0" style="-fx-background-color: #00134d;" />
+            <AnchorPane fx:id="paneReminder" layoutX="411.0" layoutY="37.0" prefHeight="255.0" prefWidth="466.0">
+               <children>
+                  <Label fx:id="lblErrorReminder" layoutX="14.0" layoutY="14.0" />
+                  <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="430.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <Label layoutX="75.0" prefHeight="38.0" prefWidth="64.0" text="Deadline" textFill="#d9e9f2">
+                           <font>
+                              <Font name="Gabriola" size="20.0" />
+                           </font>
+                        </Label>
+                        <DatePicker fx:id="dtpReminder" layoutX="223.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="5.0" layoutY="119.0" prefHeight="35.0" prefWidth="434.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <Label layoutX="42.0" layoutY="1.0" text="How many days before" textFill="#d9e9f2">
+                           <font>
+                              <Font name="Gabriola" size="20.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="cmbDays" layoutX="217.0" layoutY="5.0" prefHeight="26.0" prefWidth="210.0" />
+                     </children>
+                  </AnchorPane>
+                  <Button fx:id="btnNewReminder" layoutX="198.0" layoutY="209.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <AnchorPane layoutX="119.0" layoutY="162.0" prefHeight="35.0" prefWidth="243.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <ImageView fitHeight="38.0" fitWidth="40.0" layoutY="-1.0">
+                           <image>
+                              <Image url="@images/reminder_icon.png" />
+                           </image>
+                        </ImageView>
+                        <ComboBox fx:id="cmbReminderType" layoutX="40.0" layoutY="3.0" prefHeight="26.0" prefWidth="196.0" promptText="Reminder type" />
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="paneRent" layoutX="21.0" layoutY="14.0" prefHeight="308.0" prefWidth="332.0" visible="false">
+               <children>
+                  <AnchorPane layoutX="40.0" layoutY="42.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                           <image>
+                              <Image url="@images/rent_icon.png" />
+                           </image>
+                        </ImageView>
+                        <ComboBox fx:id="cmbRentType" layoutX="47.0" layoutY="2.0" onAction="#cmbRentTypeOnChange" prefHeight="26.0" prefWidth="200.0" promptText="Rent Type" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutY="190.0" prefHeight="38.0" prefWidth="332.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <Label layoutX="14.0" prefHeight="38.0" prefWidth="210.0" text="Payment date " textFill="#d9e9f2">
+                           <font>
+                              <Font name="Gabriola" size="20.0" />
+                           </font>
+                        </Label>
+                        <DatePicker fx:id="dtpRent" layoutX="119.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="38.0" layoutY="140.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <ImageView fitHeight="43.0" fitWidth="44.0" layoutY="-1.0">
+                           <image>
+                              <Image url="@images/payment_icon.png" />
+                           </image>
+                        </ImageView>
+                        <TextField fx:id="txtAmount" layoutX="54.0" layoutY="5.0" prefHeight="26.0" prefWidth="196.0" promptText="Payment amount in RON" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                           <font>
+                              <Font name="Gadugi Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane fx:id="paneUtilities" layoutX="40.0" layoutY="84.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;" visible="false">
+                     <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                           <image>
+                              <Image url="@images/utilities_icon.png" />
+                           </image>
+                        </ImageView>
+                        <ComboBox fx:id="cmbUtilities" layoutX="47.0" layoutY="2.0" prefHeight="26.0" prefWidth="200.0" promptText="Utilities Types" />
+                     </children>
+                  </AnchorPane>
+                  <Button fx:id="btnNewRentFee" layoutX="133.0" layoutY="251.0" mnemonicParsing="false" onAction="#btnNewRentFeeOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Label fx:id="lblRentError" layoutX="14.0" layoutY="14.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="paneTax" layoutX="478.0" layoutY="305.0" prefHeight="255.0" prefWidth="332.0">
+               <children>
+                  <AnchorPane layoutX="40.0" layoutY="42.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                           <image>
+                              <Image url="@images/tax_icon.png" />
+                           </image>
+                        </ImageView>
+                        <TextField fx:id="txtTaxType" editable="false" layoutX="52.0" layoutY="4.0" prefHeight="26.0" prefWidth="196.0" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                           <font>
+                              <Font name="Gadugi Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutY="86.0" prefHeight="38.0" prefWidth="332.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <Label layoutX="14.0" prefHeight="38.0" prefWidth="210.0" text="Payment date " textFill="#d9e9f2">
+                           <font>
+                              <Font name="Gabriola" size="20.0" />
+                           </font>
+                        </Label>
+                        <DatePicker fx:id="dtpTax" layoutX="119.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="38.0" layoutY="140.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+                     <children>
+                        <ImageView fitHeight="43.0" fitWidth="44.0" layoutY="-1.0">
+                           <image>
+                              <Image url="@images/payment_icon.png" />
+                           </image>
+                        </ImageView>
+                        <TextField fx:id="txtTaxAmount" layoutX="54.0" layoutY="5.0" prefHeight="26.0" prefWidth="196.0" promptText="Payment amount in RON" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                           <font>
+                              <Font name="Gadugi Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </AnchorPane>
+                  <Button fx:id="btnNewTax" layoutX="131.0" layoutY="202.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Label fx:id="lblTaxError" layoutX="14.0" layoutY="14.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="paneSlider" layoutY="6.0" prefHeight="598.0" prefWidth="222.0" style="-fx-background-color: #00134d;">
+               <children>
+                  <Button fx:id="btnRent" layoutX="4.0" layoutY="52.0" mnemonicParsing="false" onAction="#btnRentOnClick" prefHeight="31.0" prefWidth="214.0" style="-fx-background-color: transparent;" text="To add a rent fee" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnReminder" layoutX="8.0" layoutY="79.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="214.0" style="-fx-background-color: transparent;" text="To add a reminder" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnTransport" layoutX="-2.0" layoutY="107.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="222.0" style="-fx-background-color: transparent;" text="To add a transport fee" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnFood" layoutX="7.0" layoutY="136.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="214.0" style="-fx-background-color: transparent;" text="To add a food tax" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnFree" layoutX="3.0" layoutY="163.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="214.0" style="-fx-background-color: transparent;" text="To add a leisure fee" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnGraphic" layoutX="2.0" layoutY="191.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="214.0" style="-fx-background-color: transparent;" text="Graphic" textAlignment="JUSTIFY" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gadugi Bold" size="15.0" />
+                     </font>
+                  </Button>
+               </children></AnchorPane>
          </children>
       </AnchorPane>
    </children>
