--- a/src/main/resources/project/licenta/login.fxml
+++ b/src/main/resources/project/licenta/login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -55,7 +56,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <Button fx:id="btnLogin" layoutX="69.0" layoutY="266.0" mnemonicParsing="false" onAction="#btnLoginOnClick" prefHeight="43.0" prefWidth="163.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Login" textFill="#d9e9f2">
+            <Button fx:id="btnLogin" layoutX="69.0" layoutY="299.0" mnemonicParsing="false" onAction="#btnLoginOnClick" prefHeight="43.0" prefWidth="163.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Login" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
@@ -66,6 +67,11 @@
                </font>
             </Label>
             <Label fx:id="label" layoutX="42.0" layoutY="98.0" />
+            <CheckBox fx:id="chkLogged" layoutX="42.0" layoutY="259.0" mnemonicParsing="false" text="Keep me logged in" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="12.0" />
+               </font>
+            </CheckBox>
          </children>
       </AnchorPane>
       <ImageView fitHeight="63.0" fitWidth="195.0" layoutX="512.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
